--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,19 @@ library(knitr)
 
 # Code for "Neophytes may promote hybridization and adaptations to a changing planet"
 
-The R Code provided in this repository allows to reproduce the entire data carpentry, analysis and data visualization. Due to large file size the data can be downloaded here:
+The R Code provided in this repository allows to reproduce the entire data carpentry, analysis and data visualization. 
+
+POWO, GloNAF and human footprint data are publicly available at:
+
+POWO: https://storage.googleapis.com/kew-dev-backup/world_checklist_names_and_distribution_feb_21.zip
+
+GloNAF: https://idata.idiv.de/DDM/Data/ShowData/257
+
+Human footprint: https://sedac.ciesin.columbia.edu/data/set/wildareas-v3-2009-human-footprint
+
+
+British Ordnance Survey national grid is available at: https://github.com/OrdnanceSurvey/OS-British-National-Grids
+
 
 The script structure follows the figures in the main text.
 
