--- a/README.Rmd
+++ b/README.Rmd
@@ -49,6 +49,6 @@ The script structure follows the figures in the main text.
 
 
 ## Contact
-Please contact us at ingmar.staude@uni-leipzig.de if you have further questions, or information on plants we have not listed yet among conservation gardening species.
+Please contact us at ingmar.staude@uni-leipzig.de if you have further questions.
 
 
