--- a/README.Rmd
+++ b/README.Rmd
@@ -15,9 +15,8 @@ knitr::opts_chunk$set(
 library(knitr)
 ```
 
-# Code for "Neophytes may promote hybridization and adaptations to a changing planet"
-
-The R Code provided in this repository allows to reproduce the entire data carpentry, analysis and data visualization. 
+# About
+The R Code provided in this repository allows to reproduce the entire data carpentry, analysis and visualization of *"Neophytes may promote hybridization and adaptations to a changing planet"*.
 
 POWO, GloNAF and human footprint data are publicly available at:
 
@@ -31,9 +30,9 @@ Human footprint: https://sedac.ciesin.columbia.edu/data/set/wildareas-v3-2009-hu
 British Ordnance Survey national grid is available at: https://github.com/OrdnanceSurvey/OS-British-National-Grids
 
 
-The script structure follows the figures in the main text.
-
 ## Folder structure
+The script structure in the `R-code` folder follows the figures in the main text.
+
 
 1. `00` loads all packages
 
